--- a/BaseballTour/mainwindow.ui
+++ b/BaseballTour/mainwindow.ui
@@ -20,7 +20,7 @@
      <x>0</x>
      <y>0</y>
      <width>800</width>
-     <height>25</height>
+     <height>21</height>
     </rect>
    </property>
    <widget class="QMenu" name="menuFile">
@@ -33,6 +33,8 @@
      <string>Database</string>
     </property>
     <addaction name="actionView_Database"/>
+    <addaction name="separator"/>
+    <addaction name="actionView_Database_by_Name"/>
    </widget>
    <widget class="QMenu" name="menuAdministrator">
     <property name="title">
@@ -65,6 +67,11 @@
   <action name="actionLog_Out">
    <property name="text">
     <string>Log Out</string>
+   </property>
+  </action>
+  <action name="actionView_Database_by_Name">
+   <property name="text">
+    <string>View Database by Name</string>
    </property>
   </action>
  </widget>
