--- a/BaseballTour/mainwindow.ui
+++ b/BaseballTour/mainwindow.ui
@@ -20,13 +20,15 @@
      <x>0</x>
      <y>0</y>
      <width>800</width>
-     <height>21</height>
+     <height>25</height>
     </rect>
    </property>
    <widget class="QMenu" name="menuFile">
     <property name="title">
      <string>File</string>
     </property>
+    <addaction name="actionImport_Teams"/>
+    <addaction name="actionImport_Souvenirs"/>
    </widget>
    <widget class="QMenu" name="menuDatabase">
     <property name="title">
@@ -72,6 +74,16 @@
   <action name="actionView_Database_by_Name">
    <property name="text">
     <string>View Database by Name</string>
+   </property>
+  </action>
+  <action name="actionImport_Teams">
+   <property name="text">
+    <string>Import Teams</string>
+   </property>
+  </action>
+  <action name="actionImport_Souvenirs">
+   <property name="text">
+    <string>Import Souvenirs</string>
    </property>
   </action>
  </widget>
