--- a/BaseballTour/databaseviewform.ui
+++ b/BaseballTour/databaseviewform.ui
@@ -83,7 +83,7 @@
      <property name="geometry">
       <rect>
        <x>0</x>
-       <y>10</y>
+       <y>0</y>
        <width>1071</width>
        <height>61</height>
       </rect>
@@ -92,48 +92,23 @@
       <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p align=&quot;center&quot;&gt;&lt;span style=&quot; font-size:26pt; font-weight:600;&quot;&gt;MLB Teams by League&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
      </property>
     </widget>
-    <widget class="QTabWidget" name="leagueTabs">
+    <widget class="QWidget" name="horizontalLayoutWidget">
      <property name="geometry">
       <rect>
        <x>10</x>
-       <y>80</y>
-       <width>1051</width>
-       <height>581</height>
+       <y>60</y>
+       <width>1061</width>
+       <height>561</height>
       </rect>
      </property>
-     <property name="currentIndex">
-      <number>0</number>
-     </property>
-     <widget class="QWidget" name="americanTab">
-      <attribute name="title">
-       <string>American</string>
-      </attribute>
-      <widget class="QTableWidget" name="americanTeamsTableWidget">
-       <property name="geometry">
-        <rect>
-         <x>10</x>
-         <y>10</y>
-         <width>1031</width>
-         <height>521</height>
-        </rect>
-       </property>
-      </widget>
-     </widget>
-     <widget class="QWidget" name="nationalTab">
-      <attribute name="title">
-       <string>National</string>
-      </attribute>
-      <widget class="QTableWidget" name="nationalTeamsTableWidget">
-       <property name="geometry">
-        <rect>
-         <x>10</x>
-         <y>10</y>
-         <width>1031</width>
-         <height>521</height>
-        </rect>
-       </property>
-      </widget>
-     </widget>
+     <layout class="QHBoxLayout" name="horizontalLayout_2">
+      <item>
+       <widget class="QTableWidget" name="americanTeamsTableWidget"/>
+      </item>
+      <item>
+       <widget class="QTableWidget" name="nationalTeamsTableWidget"/>
+      </item>
+     </layout>
     </widget>
    </widget>
    <widget class="QWidget" name="roofTypePage">
