--- a/BaseballTour/databaseviewform.ui
+++ b/BaseballTour/databaseviewform.ui
@@ -126,12 +126,12 @@
      </property>
     </widget>
    </widget>
-   <widget class="QWidget" name="ctrFieldPage">
+   <widget class="QWidget" name="distCtrPage">
     <widget class="QLabel" name="label_4">
      <property name="geometry">
       <rect>
        <x>0</x>
-       <y>0</y>
+       <y>10</y>
        <width>1071</width>
        <height>61</height>
       </rect>
@@ -140,15 +140,37 @@
       <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p align=&quot;center&quot;&gt;&lt;span style=&quot; font-size:26pt; font-weight:600;&quot;&gt;MLB Teams by Distance to Center Field&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
      </property>
     </widget>
-    <widget class="QTableView" name="distCtrModel">
+    <widget class="QWidget" name="verticalLayoutWidget_2">
      <property name="geometry">
       <rect>
-       <x>20</x>
-       <y>60</y>
-       <width>1041</width>
-       <height>581</height>
+       <x>10</x>
+       <y>180</y>
+       <width>1061</width>
+       <height>351</height>
       </rect>
      </property>
+     <layout class="QVBoxLayout" name="verticalLayout_2">
+      <item>
+       <widget class="QLabel" name="label_6">
+        <property name="text">
+         <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p align=&quot;center&quot;&gt;&lt;span style=&quot; font-size:11pt; font-weight:600;&quot;&gt;Greatest&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QTableWidget" name="greatestCenterFldWidget"/>
+      </item>
+      <item>
+       <widget class="QLabel" name="label_7">
+        <property name="text">
+         <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p align=&quot;center&quot;&gt;&lt;span style=&quot; font-size:11pt; font-weight:600;&quot;&gt;Least&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QTableWidget" name="leastCenterFldWidget"/>
+      </item>
+     </layout>
     </widget>
    </widget>
   </widget>
@@ -196,7 +218,7 @@
        </widget>
       </item>
       <item>
-       <widget class="QRadioButton" name="ctrFieldButton">
+       <widget class="QRadioButton" name="distCtrButton">
         <property name="text">
          <string>Distance to Center Field</string>
         </property>
