--- a/BaseballTour/mainwindow.ui
+++ b/BaseballTour/mainwindow.ui
@@ -17,60 +17,70 @@
    <widget class="QTabWidget" name="tabWidget">
     <property name="geometry">
      <rect>
-      <x>30</x>
-      <y>20</y>
-      <width>741</width>
-      <height>441</height>
+      <x>10</x>
+      <y>10</y>
+      <width>781</width>
+      <height>561</height>
      </rect>
     </property>
     <property name="currentIndex">
      <number>0</number>
     </property>
-    <widget class="QWidget" name="tab">
+    <widget class="QWidget" name="tab_5">
      <attribute name="title">
-      <string>Quick Trip</string>
+      <string>Simple Trip</string>
      </attribute>
-     <widget class="QComboBox" name="comboBox">
+     <widget class="QComboBox" name="simpleFromComboBox">
       <property name="geometry">
        <rect>
         <x>20</x>
-        <y>50</y>
-        <width>141</width>
+        <y>40</y>
+        <width>171</width>
         <height>22</height>
        </rect>
       </property>
      </widget>
-     <widget class="QLabel" name="label">
+     <widget class="QComboBox" name="simpleToComboBox">
       <property name="geometry">
        <rect>
         <x>20</x>
-        <y>30</y>
-        <width>71</width>
+        <y>100</y>
+        <width>171</width>
+        <height>22</height>
+       </rect>
+      </property>
+     </widget>
+     <widget class="QLabel" name="label_2">
+      <property name="geometry">
+       <rect>
+        <x>20</x>
+        <y>20</y>
+        <width>47</width>
+        <height>13</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>From</string>
+      </property>
+     </widget>
+     <widget class="QLabel" name="label_3">
+      <property name="geometry">
+       <rect>
+        <x>20</x>
+        <y>80</y>
+        <width>81</width>
         <height>16</height>
        </rect>
       </property>
       <property name="text">
-       <string>Starting Team</string>
+       <string>To</string>
       </property>
      </widget>
-     <widget class="QPushButton" name="pushButton">
-      <property name="geometry">
-       <rect>
-        <x>180</x>
-        <y>290</y>
-        <width>80</width>
-        <height>21</height>
-       </rect>
-      </property>
-      <property name="text">
-       <string>Add</string>
-      </property>
-     </widget>
-     <widget class="QPushButton" name="pushButton_5">
+     <widget class="QPushButton" name="simpleStartButton">
       <property name="geometry">
        <rect>
         <x>20</x>
-        <y>340</y>
+        <y>150</y>
         <width>80</width>
         <height>21</height>
        </rect>
@@ -79,21 +89,75 @@
        <string>Start</string>
       </property>
      </widget>
-     <widget class="QListWidget" name="listWidget">
+    </widget>
+    <widget class="QWidget" name="tab">
+     <attribute name="title">
+      <string>Custom Trip</string>
+     </attribute>
+     <widget class="QComboBox" name="startComboBox">
       <property name="geometry">
        <rect>
         <x>20</x>
-        <y>90</y>
-        <width>341</width>
+        <y>280</y>
+        <width>211</width>
+        <height>22</height>
+       </rect>
+      </property>
+     </widget>
+     <widget class="QLabel" name="label">
+      <property name="geometry">
+       <rect>
+        <x>20</x>
+        <y>260</y>
+        <width>71</width>
+        <height>16</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>Starting Team</string>
+      </property>
+     </widget>
+     <widget class="QPushButton" name="addPushButton">
+      <property name="geometry">
+       <rect>
+        <x>240</x>
+        <y>220</y>
+        <width>80</width>
+        <height>21</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>Add</string>
+      </property>
+     </widget>
+     <widget class="QPushButton" name="startPushButton">
+      <property name="geometry">
+       <rect>
+        <x>330</x>
+        <y>280</y>
+        <width>80</width>
+        <height>21</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>Start</string>
+      </property>
+     </widget>
+     <widget class="QListWidget" name="teamListWidget">
+      <property name="geometry">
+       <rect>
+        <x>20</x>
+        <y>20</y>
+        <width>391</width>
         <height>192</height>
        </rect>
       </property>
      </widget>
-     <widget class="QPushButton" name="pushButton_6">
+     <widget class="QPushButton" name="removePushButton">
       <property name="geometry">
        <rect>
-        <x>280</x>
-        <y>290</y>
+        <x>330</x>
+        <y>220</y>
         <width>80</width>
         <height>21</height>
        </rect>
@@ -102,12 +166,12 @@
        <string>Remove</string>
       </property>
      </widget>
-     <widget class="QComboBox" name="comboBox_2">
+     <widget class="QComboBox" name="addComboBox">
       <property name="geometry">
        <rect>
         <x>20</x>
-        <y>290</y>
-        <width>151</width>
+        <y>220</y>
+        <width>211</width>
         <height>22</height>
        </rect>
       </property>
@@ -117,7 +181,7 @@
      <attribute name="title">
       <string>Other</string>
      </attribute>
-     <widget class="QPushButton" name="pushButton_2">
+     <widget class="QPushButton" name="MSTpushButton">
       <property name="geometry">
        <rect>
         <x>20</x>
@@ -130,7 +194,7 @@
        <string>MST</string>
       </property>
      </widget>
-     <widget class="QPushButton" name="pushButton_3">
+     <widget class="QPushButton" name="DFSpushButton">
       <property name="geometry">
        <rect>
         <x>20</x>
@@ -143,7 +207,7 @@
        <string>DFS</string>
       </property>
      </widget>
-     <widget class="QPushButton" name="pushButton_4">
+     <widget class="QPushButton" name="BFSpushButton">
       <property name="geometry">
        <rect>
         <x>20</x>
