--- a/BaseballTour/mainwindow.ui
+++ b/BaseballTour/mainwindow.ui
@@ -253,6 +253,8 @@
     </property>
     <addaction name="actionLog_In"/>
     <addaction name="actionLog_Out"/>
+    <addaction name="actionModify_Database"/>
+    <addaction name="separator"/>
     <addaction name="actionDBG_Is_User_Admin"/>
    </widget>
    <addaction name="menuFile"/>
@@ -293,6 +295,11 @@
   <action name="actionImport_Souvenirs">
    <property name="text">
     <string>Import Souvenirs</string>
+   </property>
+  </action>
+  <action name="actionModify_Database">
+   <property name="text">
+    <string>Modify Database</string>
    </property>
   </action>
  </widget>
