--- a/BaseballTour/admin.ui
+++ b/BaseballTour/admin.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>671</width>
-    <height>500</height>
+    <width>731</width>
+    <height>544</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -17,7 +17,7 @@
    <property name="geometry">
     <rect>
      <x>230</x>
-     <y>460</y>
+     <y>490</y>
      <width>171</width>
      <height>32</height>
     </rect>
@@ -62,9 +62,9 @@
    <property name="geometry">
     <rect>
      <x>10</x>
-     <y>50</y>
-     <width>641</width>
-     <height>401</height>
+     <y>40</y>
+     <width>661</width>
+     <height>431</height>
     </rect>
    </property>
    <property name="currentIndex">
@@ -325,11 +325,14 @@
     <widget class="QTableView" name="souvenir_tableView">
      <property name="geometry">
       <rect>
-       <x>270</x>
+       <x>240</x>
        <y>10</y>
-       <width>581</width>
-       <height>541</height>
+       <width>401</width>
+       <height>381</height>
       </rect>
+     </property>
+     <property name="sortingEnabled">
+      <bool>true</bool>
      </property>
     </widget>
     <widget class="QLabel" name="label_stadiumName">
