--- a/BaseballTour/admin.ui
+++ b/BaseballTour/admin.ui
@@ -68,7 +68,7 @@
     </rect>
    </property>
    <property name="currentIndex">
-    <number>1</number>
+    <number>0</number>
    </property>
    <widget class="QWidget" name="ModifyStadiums">
     <attribute name="title">
@@ -85,16 +85,6 @@
      </property>
      <property name="text">
       <string>New Team Name</string>
-     </property>
-    </widget>
-    <widget class="QLineEdit" name="newTeam_field">
-     <property name="geometry">
-      <rect>
-       <x>60</x>
-       <y>70</y>
-       <width>171</width>
-       <height>20</height>
-      </rect>
      </property>
     </widget>
     <widget class="QLabel" name="stadiumName_label">
@@ -307,13 +297,36 @@
       <string>Stadium Rooftype</string>
      </property>
     </widget>
-    <widget class="QLineEdit" name="lineEdit_12">
+    <widget class="QLineEdit" name="roof_field">
      <property name="geometry">
       <rect>
        <x>390</x>
        <y>300</y>
        <width>171</width>
        <height>20</height>
+      </rect>
+     </property>
+    </widget>
+    <widget class="QPushButton" name="pushButton">
+     <property name="geometry">
+      <rect>
+       <x>270</x>
+       <y>350</y>
+       <width>91</width>
+       <height>23</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>Update Teams</string>
+     </property>
+    </widget>
+    <widget class="QComboBox" name="comboBox">
+     <property name="geometry">
+      <rect>
+       <x>60</x>
+       <y>70</y>
+       <width>171</width>
+       <height>22</height>
       </rect>
      </property>
     </widget>
