--- a/BaseballTour/admin.ui
+++ b/BaseballTour/admin.ui
@@ -35,8 +35,8 @@
   <widget class="QLabel" name="admin_label">
    <property name="geometry">
     <rect>
-     <x>-110</x>
-     <y>10</y>
+     <x>-90</x>
+     <y>0</y>
      <width>881</width>
      <height>41</height>
     </rect>
@@ -92,7 +92,7 @@
       <rect>
        <x>90</x>
        <y>100</y>
-       <width>101</width>
+       <width>131</width>
        <height>21</height>
       </rect>
      </property>
@@ -126,14 +126,17 @@
     <widget class="QDoubleSpinBox" name="seatingCapacity">
      <property name="geometry">
       <rect>
-       <x>110</x>
+       <x>90</x>
        <y>170</y>
-       <width>61</width>
+       <width>101</width>
        <height>22</height>
       </rect>
      </property>
      <property name="decimals">
       <number>0</number>
+     </property>
+     <property name="maximum">
+      <double>1000000000.000000000000000</double>
      </property>
     </widget>
     <widget class="QLabel" name="stadiumLocation_label">
@@ -201,8 +204,11 @@
        <x>420</x>
        <y>70</y>
        <width>101</width>
-       <height>41</height>
+       <height>51</height>
       </rect>
+     </property>
+     <property name="currentRow">
+      <number>0</number>
      </property>
      <item>
       <property name="text">
@@ -226,16 +232,6 @@
      </property>
      <property name="text">
       <string>Date Opened</string>
-     </property>
-    </widget>
-    <widget class="QLineEdit" name="dateOpened_field">
-     <property name="geometry">
-      <rect>
-       <x>420</x>
-       <y>150</y>
-       <width>91</width>
-       <height>20</height>
-      </rect>
      </property>
     </widget>
     <widget class="QLabel" name="distanceCenter_label">
@@ -266,15 +262,15 @@
       <rect>
        <x>420</x>
        <y>230</y>
-       <width>101</width>
+       <width>111</width>
        <height>21</height>
       </rect>
      </property>
      <property name="text">
-      <string>Stadium Topology</string>
+      <string>Stadium Typology</string>
      </property>
     </widget>
-    <widget class="QLineEdit" name="topology_field">
+    <widget class="QLineEdit" name="typology_field">
      <property name="geometry">
       <rect>
        <x>390</x>
@@ -328,6 +324,19 @@
        <width>171</width>
        <height>22</height>
       </rect>
+     </property>
+    </widget>
+    <widget class="QSpinBox" name="dateOpened_spinbox">
+     <property name="geometry">
+      <rect>
+       <x>430</x>
+       <y>150</y>
+       <width>81</width>
+       <height>25</height>
+      </rect>
+     </property>
+     <property name="maximum">
+      <number>9999</number>
      </property>
     </widget>
    </widget>
