--- a/BaseballTour/purchasesouvenirs.ui
+++ b/BaseballTour/purchasesouvenirs.ui
@@ -77,8 +77,9 @@
     <item>
      <widget class="QTableWidget" name="purchasedCartTableWidget">
       <property name="columnCount">
-       <number>2</number>
+       <number>3</number>
       </property>
+      <column/>
       <column/>
       <column/>
      </widget>
@@ -114,7 +115,7 @@
     <item row="0" column="0">
      <widget class="QLabel" name="label_3">
       <property name="text">
-       <string>Campus Subtotal</string>
+       <string>Stadium Subtotal</string>
       </property>
      </widget>
     </item>
@@ -157,6 +158,19 @@
    </property>
    <property name="text">
     <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;span style=&quot; font-size:12pt; font-weight:600;&quot;&gt;Placeholder&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+   </property>
+  </widget>
+  <widget class="QSpinBox" name="purchaseAmountSpinBox">
+   <property name="geometry">
+    <rect>
+     <x>100</x>
+     <y>340</y>
+     <width>46</width>
+     <height>25</height>
+    </rect>
+   </property>
+   <property name="minimum">
+    <number>1</number>
    </property>
   </widget>
  </widget>
