--- a/BaseballTour/tripplanner.ui
+++ b/BaseballTour/tripplanner.ui
@@ -243,8 +243,8 @@
       <rect>
        <x>0</x>
        <y>20</y>
-       <width>421</width>
-       <height>511</height>
+       <width>711</width>
+       <height>371</height>
       </rect>
      </property>
      <property name="currentIndex">
@@ -257,10 +257,10 @@
       <widget class="QWidget" name="verticalLayoutWidget_2">
        <property name="geometry">
         <rect>
-         <x>0</x>
+         <x>10</x>
          <y>0</y>
-         <width>401</width>
-         <height>471</height>
+         <width>691</width>
+         <height>331</height>
         </rect>
        </property>
        <layout class="QVBoxLayout" name="verticalLayout_2">
@@ -285,32 +285,36 @@
        </layout>
       </widget>
      </widget>
-     <widget class="QWidget" name="byCampusTab">
+     <widget class="QWidget" name="byStadiumTab">
       <attribute name="title">
-       <string>By Campus</string>
+       <string>By Stadium</string>
       </attribute>
       <widget class="QWidget" name="verticalLayoutWidget_3">
        <property name="geometry">
         <rect>
          <x>0</x>
          <y>0</y>
-         <width>401</width>
-         <height>471</height>
+         <width>701</width>
+         <height>331</height>
         </rect>
        </property>
        <layout class="QVBoxLayout" name="verticalLayout_3">
         <item>
          <widget class="QLabel" name="label_13">
           <property name="text">
-           <string>Total Spent per Campus</string>
+           <string>Total Spent per Stadium</string>
           </property>
          </widget>
         </item>
         <item>
+         <widget class="QComboBox" name="stadiumComboBox"/>
+        </item>
+        <item>
          <widget class="QTableWidget" name="souvenirsPurchasedTableWidget_2">
           <property name="columnCount">
-           <number>2</number>
+           <number>3</number>
           </property>
+          <column/>
           <column/>
           <column/>
          </widget>
@@ -322,8 +326,8 @@
     <widget class="QWidget" name="formLayoutWidget_2">
      <property name="geometry">
       <rect>
-       <x>440</x>
-       <y>50</y>
+       <x>330</x>
+       <y>400</y>
        <width>274</width>
        <height>131</height>
       </rect>
@@ -372,6 +376,9 @@
       </item>
       <item row="0" column="1">
        <widget class="QLineEdit" name="startLineEdit">
+        <property name="readOnly">
+         <bool>true</bool>
+        </property>
         <property name="placeholderText">
          <string>Placeholder Stadium</string>
         </property>
@@ -404,7 +411,14 @@
        </widget>
       </item>
       <item row="3" column="1">
-       <widget class="QSpinBox" name="distanceSpinBox"/>
+       <widget class="QSpinBox" name="distanceSpinBox">
+        <property name="readOnly">
+         <bool>true</bool>
+        </property>
+        <property name="buttonSymbols">
+         <enum>QAbstractSpinBox::NoButtons</enum>
+        </property>
+       </widget>
       </item>
      </layout>
     </widget>
