--- a/BaseballTour/admin.ui
+++ b/BaseballTour/admin.ui
@@ -68,7 +68,7 @@
     </rect>
    </property>
    <property name="currentIndex">
-    <number>0</number>
+    <number>1</number>
    </property>
    <widget class="QWidget" name="ModifyStadiums">
     <attribute name="title">
@@ -361,7 +361,7 @@
      <property name="geometry">
       <rect>
        <x>10</x>
-       <y>30</y>
+       <y>20</y>
        <width>251</width>
        <height>20</height>
       </rect>
@@ -463,18 +463,44 @@
        <height>22</height>
       </rect>
      </property>
+     <property name="maximum">
+      <double>1000.990000000000009</double>
+     </property>
     </widget>
-    <widget class="QPushButton" name="pushButton_updateSouvenir_3">
+    <widget class="QPushButton" name="pushButton_addNewSouvenir">
      <property name="geometry">
       <rect>
        <x>90</x>
-       <y>260</y>
+       <y>230</y>
        <width>81</width>
        <height>31</height>
       </rect>
      </property>
      <property name="text">
       <string>Add Souvenir</string>
+     </property>
+    </widget>
+    <widget class="QLineEdit" name="lineEdit_teamName">
+     <property name="geometry">
+      <rect>
+       <x>62</x>
+       <y>40</y>
+       <width>151</width>
+       <height>20</height>
+      </rect>
+     </property>
+    </widget>
+    <widget class="QPushButton" name="pushButton_search">
+     <property name="geometry">
+      <rect>
+       <x>90</x>
+       <y>280</y>
+       <width>81</width>
+       <height>31</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>Search</string>
      </property>
     </widget>
    </widget>
