Made changes to souvenir admin window and database

--- a/BaseballTour/addsouvenir.ui
+++ b/BaseballTour/addsouvenir.ui
@@ -168,6 +168,9 @@
       <height>22</height>
      </rect>
     </property>
+    <property name="decimals">
+     <number>2</number>
+    </property>
     <property name="maximum">
      <double>1000.990000000000009</double>
     </property>
