--- a/BaseballTour/resources.qrc
+++ b/BaseballTour/resources.qrc
@@ -5,5 +5,8 @@
         <file>img/baseball-diamond-outline.png</file>
         <file>img/graph-outline.png</file>
         <file>img/wrench-outline.png</file>
+        <file>img/baseball-pic.png</file>
+        <file>img/Fenway-park.png</file>
+        <file>img/ball-bat-helmet.png</file>
     </qresource>
 </RCC>
